# RustyStore

./: .gitignore  Cargo.toml  README.md
examples/handle/: main.rs
examples/manager/: main.rs
examples/manager_trait/: main.rs
examples/manager_uncommitted/: main.rs
examples/minimal/: main.rs
rusty-store-macros/: Cargo.toml
rusty-store-macros/src/: lib.rs
src/: lib.rs  manager.rs  storage.rs
