[package]
name = "rusty-store"
version = "0.2.0"
edition = "2021"
authors = ["Noah Mazy <github.com/mazynoah>"]
repository = "https://github.com/mazynoah/RustyStore"
description = "A Rust library for managing and storing serialized data using RON (Rusty Object Notation). It provides utilities for handling various types of stores, managing their persistence, and offering abstractions for modifying and committing data."
keywords = ["storage", "data", "persistence", "data-management"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
dirs = "5.0.1"
log = "0.4.22"
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
rustystore-macros = { path = "./rusty-store-macros" }

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"


[[example]]
name = "manager"

[[example]]
name = "manager_trait"

[[example]]
name = "manager_uncommitted"

[[example]]
name = "handle"
